-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.8.0
-
None
-
fc58cb88c0623a3c0d083b2af9ab826e6bd308ff
attached screenshot shows qtc-4.8 with a font zoom of 200%. the debugger window (more specifically the breakpoint view) takes the global font zoom into account, which no other tool window does.
expected behaviour: changing the font zoom of the editor doesn't change the zoom of the debugger window